trunk/Archive2/63/079b7552dfbc22/output
main.cpp:3:6: error: ISO C++ forbids declaration of 'f' with no type [-fpermissive]
    f() {
      ^
main.cpp: In member function 'int Base::f()':
main.cpp:5:4: warning: no return statement in function returning non-void [-Wreturn-type]
    }
    ^
main.cpp: At global scope:
main.cpp:8:10: error: 'void Derived::f()' marked override, but does not override
     void f() override { // 'override' is optional
          ^
